[gd_scene load_steps=7 format=3 uid="uid://x8mrs6fw4jbm"]

[ext_resource type="PackedScene" uid="uid://q51ynyhklo1u" path="res://TheHostage/Puzzles/Door/base.tscn" id="1_urg35"]
[ext_resource type="Script" path="res://TheHostage/Puzzles/Door/base.gd" id="2_3khd3"]
[ext_resource type="Texture2D" uid="uid://bwnebqpculq7g" path="res://assets/2D/doorlock_passcode/components/lamp/doorlock_lamp_default_cropped.png" id="3_3khd3"]
[ext_resource type="Texture2D" uid="uid://ng7jkq7ya8tt" path="res://assets/2D/doorlock_passcode/components/lamp/correct_answer/doorlock_lamp_green_base_cropped.png" id="4_gf7u5"]
[ext_resource type="Texture2D" uid="uid://ddlih4e62rvei" path="res://assets/2D/doorlock_passcode/components/lamp/incorrect_answer/doorlock_lamp_red_glow_cropped.png" id="4_gqyqj"]
[ext_resource type="Texture2D" uid="uid://deqq13jfs2lim" path="res://assets/2D/doorlock_passcode/components/lamp/correct_answer/doorlock_lamp_green_glow_cropped.png" id="5_4qhr8"]

[node name="Door" type="CanvasLayer"]

[node name="Base" parent="." instance=ExtResource("1_urg35")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_3khd3")

[node name="Label" type="Label" parent="Base"]
layout_mode = 0
offset_left = 6.0
offset_top = -171.0
offset_right = 340.0
offset_bottom = -116.0
theme_override_font_sizes/font_size = 40

[node name="GridContainer" type="GridContainer" parent="Base"]
z_index = 2
layout_mode = 0
offset_left = -161.0
offset_top = -210.0
offset_right = -35.0
offset_bottom = -40.0
columns = 3

[node name="1" type="Button" parent="Base/GridContainer"]
z_index = 2
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
flat = true

[node name="2" type="Button" parent="Base/GridContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
flat = true

[node name="3" type="Button" parent="Base/GridContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
flat = true

[node name="4" type="Button" parent="Base/GridContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
flat = true

[node name="5" type="Button" parent="Base/GridContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
flat = true

[node name="6" type="Button" parent="Base/GridContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
flat = true

[node name="7" type="Button" parent="Base/GridContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
flat = true

[node name="8" type="Button" parent="Base/GridContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
flat = true

[node name="9" type="Button" parent="Base/GridContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
flat = true

[node name="Delete" type="Button" parent="Base/GridContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
flat = true

[node name="0" type="Button" parent="Base/GridContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
flat = true

[node name="OK" type="Button" parent="Base/GridContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
flat = true

[node name="LampBase" type="TextureRect" parent="Base"]
z_index = 1
clip_contents = true
layout_mode = 0
offset_left = -108.0
offset_top = -253.0
offset_right = 892.0
offset_bottom = 747.0
scale = Vector2(0.025, 0.025)
texture = ExtResource("3_3khd3")
expand_mode = 1

[node name="LampBaseTrue" type="TextureRect" parent="Base"]
z_index = 1
clip_contents = true
layout_mode = 0
offset_left = -108.0
offset_top = -253.0
offset_right = 892.0
offset_bottom = 747.0
scale = Vector2(0.025, 0.025)
texture = ExtResource("4_gf7u5")
expand_mode = 1

[node name="GlowingLampTrue" type="TextureRect" parent="Base"]
visible = false
z_index = 1
clip_contents = true
layout_mode = 0
offset_left = -133.0
offset_top = -276.0
offset_right = 867.0
offset_bottom = 724.0
scale = Vector2(0.08, 0.08)
texture = ExtResource("5_4qhr8")
expand_mode = 1

[node name="GlowingLampFalse" type="TextureRect" parent="Base"]
visible = false
z_index = 1
clip_contents = true
layout_mode = 0
offset_left = -138.0
offset_top = -277.0
offset_right = 862.0
offset_bottom = 723.0
scale = Vector2(0.08, 0.08)
texture = ExtResource("4_gqyqj")
expand_mode = 1
